# marketlab

./: .env.example  .gitignore  .marketlab_codex.json  .tmux.conf  ARCHITEKTUR.md  DEPRECATED.md  Makefile  README.md  REPORT.md  REPORT_CONTROL.md  REPORT_FIXES.md  REPORT_LEGACY_AUDIT.md  REPORT_TMUX.md  REPORT_TMUX_FIX.md  bootstrap-marketlab.ps1  code_bundle.md  code_robust_lab.md  live_fx_viewer.py  log_summary.py  main.py  main_runner.py  main_test.py  migrations.sql  pyproject.toml  pytest.ini  quick_patch.py  request_list.md  sanity_check.py  temp_cb.py  tmp_before_control_menu.txt  tmp_bus.txt  tmp_current_verify.py  tmp_main.txt
.github/prompts/: marketlab.prompt.md
.github/workflows/: ci.yml
config/: active_symbols.json  bot.yaml  cached_symbols.json  client_ids.json  code_config.md  data_presets.json  healthcheck_config.json  order_presets.json  startup.json  symbol_availability.json  symbol_tasks.json  tasks.json
control/: control_center.py
data_clean/: stock_AAPL_5mins.csv  stock_MSFT_5mins.csv  stock_SPY_5mins.csv
docs/: ARCHITECTURE.md  ARCHITEKTUR.md  INVENTORY.md  README.md  data_formats.md
legacy/: README.md
legacy/control/: cc_demo.py  control_center.py
legacy/shared/: symbol_loader.py
legacy/telegram/: bot_inline.py
logs/: eurusd_2025-08-06.csv  eurusd_2025-08-09.csv  eurusd_2025-08-23.csv
logs/errors/: failed_requests.json
modules/: code_modules.md
modules/backtest/: runner.py  sma.py
modules/bot/: ask_flow.py  ask_flow.py.bak.20251004234548  automation.py  runner.py
modules/data_fetcher/: live_market_data.py  main.py
modules/diag/: logs.py  pnl.py  report.py  sanity.py  status.py
my_tools/: create_feature_sandbox.py  full_code_overview.py  make_request_list.py  scan_target.py  summarize_project.py
reports/: error_summary.txt  signals_5m.csv
runtime/: bot_state.json  heartbeat.json  safe_mode.json  session_id.txt  state.json  symbol_availability.json  telegram_offset.json  telegram_poll_state.json  tg_cmd_offset.json  tg_inline_offset.json
scripts/: env_check.py
shared/: __init__.py  client_registry.py  code_shared.md  config_loader.py  file_utils.py  ibkr_client.py  ibkr_symbol_checker.py  lock_tools.py  logger.py  symbol_data_router.py  symbol_loader.py  symbol_source.py  telegram_notifier.py  thread_tools.py
summaries/: full_code_overview_2025-08-23_13-28.md
telegram/: bot_control.py  bot_inline.py
tests/: conftest.py  test_app_state.py  test_bootstrap_env.py  test_bus_basic.py  test_bus_contract.py  test_bus_idempotency_ttl.py  test_bus_roundtrip.py  test_cli_order_shortflags.py  test_cli_smoke.py  test_conn_state.py  test_control_menu_parse.py  test_dashboard_conn_panels.py  test_dashboard_quit.py  test_dashboard_refresh_plan.py  test_dashboard_smoke.py  test_data_validator.py  test_env_masking.py  test_events_agg.py  test_ibkr_connect_signature.py  test_ibkr_hooks.py  test_killswitch_breaker.py  test_order_resolution.py  test_orders_token.py  test_orders_token_basic.py  test_poller_guard.py  test_poller_mock_no_network.py  test_poller_uses_settings.py  test_proc_guard_signals.py  test_settings_env.py  test_status_kpis.py  test_supervisor_health_local.py  test_supervisor_live.py  test_supervisor_menu_parse.py  test_supervisor_static_menu.py  test_supervisor_statusline.py  test_supervisor_tail_once.py  test_telegram_auth_rate_pin.py  test_telegram_tokens.py  test_telegram_usecases.py  test_tg_diag_local.py  (+10 more)
tools/: README_TUI.md  archive_env.py  env_edit.py  generate_private_summary.py  ipc_diag.py  log_summary.py  migrate_orders_token.py  mock_roundtrip.py  proc_guard.py  quick_fix_ctl_db.py  run_control.ps1  run_dashboard.ps1  run_worker.ps1  simulate_flow.py  smoke_telegram.py  start_marketlab.ps1  stop_all.sh  test_env_check.py  test_getme.py  test_ibkr_connection.py  tg_cli.py  tg_dashboard.py  tg_diag.py  tg_ids.py  tg_poller.py  tg_viewer.py  tmux_kill.sh  tmux_marketlab.sh  tmux_marketlab_slack.sh  tui_dashboard.py  verify_bootstrap.py  verify_data_loader.py  verify_mock_env.py  verify_phase3_state.py  verify_telegram.py  verify_telegram_env.py
(+211 files in other folders)
