[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketlab"
version = "0.1.0"
description = "MarketLab - modular trading research sandbox (CLI, modes, adapters)"
authors = [{ name = "blanqspace" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "ib-insync>=0.9",
  "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "ruff>=0.6",
  "black>=24.8",
]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
strict = true
