[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketlab"
version = "0.1.0"
description = "MarketLab - modular trading research sandbox (CLI, modes, adapters)"
authors = [{ name = "blanqspace" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "ib-insync>=0.9",
  "pandas>=2.2",
  "pyarrow>=17.0",
  "requests>=2.32",
  "slack_sdk>=3.27.0",
  "rich>=13.7",
  "textual>=0.47"
]

[project.optional-dependencies]
dev = [
  "black>=24.8",
  "bandit>=1.7",
  "mypy>=1.10",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src/marketlab"]
extend-exclude = [
  "src/marketlab/control_menu.py",
]
exclude = [
  ".git",
  ".github",
  ".venv",
  "control",
  "tmp_*",
  "automation",
  "modules",
  "shared",
  "tests",
  "tools",
  "data_clean",
  "reports",
  "main.py",
]

[tool.ruff.lint]
select = ["E","F","I","UP","B","PL","W","N"]
ignore = [
  "E501",
  "PLC0415",
  "PLR0913",
  "PLR0912",
  "PLR0911",
  "PLR2004",
  "B904",
  "E701",
  "E702",
  "PLW0603",
  "PLW1510",
  "F401",
  "PLR1730",
  "F841",
  "I001",
  "N802",
  "E401",
  "E402",
  "UP035",
  "UP045",
  "UP006",
  "B007",
  "PLR0915",
]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
explicit_package_bases = true
mypy_path = ["src"]
ignore_missing_imports = true
files = [
  "src/marketlab/daemon/worker.py",
  "tools/proc_guard.py",
]

[[tool.mypy.overrides]]
module = ["marketlab.tui", "marketlab.tui.*"]
strict = true

[[tool.mypy.overrides]]
module = ["marketlab.worker", "marketlab.worker.*", "marketlab.daemon.worker"]
strict = true
